objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process for SalesReps</fullName>
        <description>Hides picklist-values (Lead status) for SalesReps</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Initiated</fullName>
        </values>
        <values>
            <fullName>Not Now</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified - %28SQL%29</fullName>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Rejected%2FDisqualified</fullName>
        </values>
        <values>
            <fullName>Solar flare</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AlreadyProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atlassian_Jira_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shall be used to determine if the user is also an Atlassian Marketplace interest for Exploratory testing.
Shall be used for Marketing segmentation.
Request from Wayne 25.07.2017</description>
        <label>Atlassian Jira User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shall be used to determine if the user is interested in our Cloud Offering/solution.
Shall be used for Marketing segmentation.
Request from Wayne 26.09.2017</description>
        <label>Cloud Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacted_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Contacted_Status_End__c)), (Contacted_Status_End__c-Contacted_Status_Start__c)*24,
IF(ISNULL(Contacted_Status_End__c), (NOW()-Contacted_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacted Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Status_End__c</fullName>
        <label>Contacted Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contacted_Status_Start__c</fullName>
        <label>Contacted Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Content related send-outs if checked</description>
        <label>Subscription Content &amp; Best Practices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Address__c</fullName>
        <label>Company HQ Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_City__c</fullName>
        <label>Company HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Code__c</fullName>
        <label>Company HQ Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Full_Name__c</fullName>
        <label>Company HQ Country (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Postal_Code__c</fullName>
        <label>Company HQ Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State_Full_Name__c</fullName>
        <label>Company HQ State (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State__c</fullName>
        <label>Company HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Employees_Growth__c</fullName>
        <label>3yr Employees Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DO_3yr_Sales_Growth__c</fullName>
        <label>3yr Sales Growth %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
        <label>DeletedFromDiscoverOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Company_ID__c</fullName>
        <label>DiscoverOrg Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
        <label>Created by DiscoverOrg</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
        <label>DiscoverOrg First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
        <label>DiscoverOrg Country Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
        <label>DiscoverOrg Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
        <label>DiscoverOrg State Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
        <label>DiscoverOrg Technologies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Exclude_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
        <label>Exclude from DiscoverOrg Auto-Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
        <externalId>true</externalId>
        <label>DiscoverOrg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Fortune_Rank__c</fullName>
        <label>Fortune Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ITOrgChart__c</fullName>
        <formula>IF(ISBLANK(DSCORGPKG__DiscoverOrg_ID__c) = false, 
HYPERLINK( 
&apos;/apex/DSCORGPKG__itorgchart?co_id=&apos;  + DSCORGPKG__DiscoverOrg_Company_ID__c + &apos;&amp;scrollTo=&apos; + DSCORGPKG__DiscoverOrg_ID__c , 
&apos;View&apos;, 
&apos;_new&apos;) , 
&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Org Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Budget__c</fullName>
        <label>IT Budget (Mil)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__IT_Employees__c</fullName>
        <label>IT Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Locked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NAICS_Codes__c</fullName>
        <label>Primary NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NickName__c</fullName>
        <label>NickName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ReportsTo__c</fullName>
        <label>DiscoverOrg ReportsTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SIC_Codes__c</fullName>
        <label>Primary SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__department__c</fullName>
        <label>DiscoverOrg Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Contacted__c</fullName>
        <label>Date: Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Disqualified__c</fullName>
        <label>Date: Rejected/Disqualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <label>Date: Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Not_now__c</fullName>
        <label>Date: Not now</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Open__c</fullName>
        <label>Date: Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualified__c</fullName>
        <label>Date: Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engaged_Date__c</fullName>
        <label>Engaged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagio_tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to track leads which shall be followed by the Engagio pilot for APAC</description>
        <label>Engagio_tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Event related send-outs if checked</description>
        <label>Subscription Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__EventbriteId__c</fullName>
        <label>Eventbrite Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__EventbriteType__c</fullName>
        <label>Eventbrite Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__UniquePersonId__c</fullName>
        <formula>IF(ISBLANK(Email),&quot;*&quot;,Email) &amp; &quot;%&quot; &amp; 
IF(ISBLANK(FirstName),&quot;*&quot;,FirstName) &amp; &quot;%&quot; &amp; 
IF(ISBLANK(LastName),&quot;*&quot;,LastName) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Person Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week__c</fullName>
        <formula>MOD(FLOOR( ( DATEVALUE( CreatedDate ) - DATE(2006,01,01))/7),52)+1</formula>
        <label>Fiscal Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <description>For reporting without having specify each country</description>
        <inlineHelpText>Used for grouping in reports. 3 Geos available: EMEA, US, APAC</inlineHelpText>
        <label>Geo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiated_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Initiated_Status_End__c)), (Initiated_Status_End__c-Initiated_Status_Start__c)*24,
IF(ISNULL(Initiated_Status_End__c), (NOW()-Initiated_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiated Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiated_Status_End__c</fullName>
        <label>Initiated Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_Status_Start__c</fullName>
        <label>Initiated Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_Step_1_Date__c</fullName>
        <description>Captures the Date and Time when &quot;Step1: Call, vm, email&quot; is chosen from &quot;Initiated Steps&quot;</description>
        <label>Initiated Step 1 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_Step_2_Date__c</fullName>
        <description>Captures the Date and Time when &quot;Step2: Call, no vm&quot; is chosen from &quot;Initiated Steps&quot;</description>
        <label>Initiated Step 2 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_Step_3_Date__c</fullName>
        <description>Captures the Date and Time when &quot;Step3: Call, vm, email&quot; is chosen from &quot;Initiated Steps&quot;</description>
        <label>Initiated Step 3 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_Steps__c</fullName>
        <description>When the &quot;Lead Status&quot; is set to &quot;Initiated&quot; , Initiated Steps needs to be selected</description>
        <label>Initiated Steps</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step1: Call, vm, email</fullName>
                </value>
                <value>
                    <fullName>Step2: Call, no vm</fullName>
                </value>
                <value>
                    <fullName>Step3: Call, vm, email</fullName>
                </value>
                <value>
                    <fullName>Step4: Call, no vm</fullName>
                </value>
                <value>
                    <fullName>Step5: Call, final vm, final email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LeadAssigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Age_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(ConvertedDate)), (ConvertedDate-DATEVALUE(CreatedDate))*24,
IF(ISNULL(Qualified_Status_End__c), (TODAY()-DATEVALUE(CreatedDate))*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_source__c</fullName>
        <label>List source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apache JMeter - Brigade</fullName>
                </value>
                <value>
                    <fullName>Atlassian</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Discover.org</fullName>
                </value>
                <value>
                    <fullName>DiscoverOrg</fullName>
                </value>
                <value>
                    <fullName>E4U</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>External Webinar</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>InsideView</fullName>
                </value>
                <value>
                    <fullName>JMeter</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Netprospex</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>RainKing</fullName>
                </value>
                <value>
                    <fullName>Sales Rolodex</fullName>
                </value>
                <value>
                    <fullName>SD Times</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Techwell</fullName>
                </value>
                <value>
                    <fullName>Tradeshow - AttendeeList</fullName>
                </value>
                <value>
                    <fullName>Web Research</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
                <value>
                    <fullName>ZoomInfo</fullName>
                </value>
                <value>
                    <fullName>Tradeshow_AttendeeList</fullName>
                    <isActive>false</isActive>
                    <label>Tradeshow Attendee List</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQL_Age__c</fullName>
        <description>create date - date (MQL) in hours</description>
        <formula>(dr_mql__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <description>New Date field for MQL for new scoring logic
bazwe 23.12.2017 - request by David Sin</description>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Stage__c</fullName>
        <label>Marketing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Name</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Name_Date__c</fullName>
        <label>New Name Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Newsletter if checked</description>
        <label>Subscription Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Now_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Not_Now_Status_End__c)), (Not_Now_Status_End__c-Not_Now_Status_Start__c)*24,
 IF(ISNULL(Not_Now_Status_End__c), (NOW()-Not_Now_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Now Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Now_Status_End__c</fullName>
        <label>Not Now Status End </label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Now_Status_Start__c</fullName>
        <label>Not Now Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Open_Status_End__c)), (Open_Status_End__c-Open_Status_Start__c)*24, 
IF(ISNULL(Open_Status_End__c), (NOW()-Open_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Status_End__c</fullName>
        <label>Open Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Status_Start__c</fullName>
        <label>Open Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualified_Status_Duration_Hours__c</fullName>
        <formula>IF(NOT(ISNULL(Qualified_Status_End__c)), (Qualified_Status_End__c-Qualified_Status_Start__c)*24,
IF(ISNULL(Qualified_Status_End__c), (NOW()-Qualified_Status_Start__c)*24, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Status Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Status_End__c</fullName>
        <label>Qualified Status End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualified_Status_Start__c</fullName>
        <label>Qualified Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RestrictWorkFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RestrictWorkFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_presented__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The field is only required to investigate sync error.</description>
        <label>SFDC presented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Now_User_ID__c</fullName>
        <description>Captures the ID of the Service Now User object</description>
        <label>Service Now User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnowOutboundInSynch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reflects, that a record is currently in synchronization</description>
        <label>SnowOutboundInSynch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SnowOutboundSynchDone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reflects, that a record is synchronized</description>
        <label>SnowOutboundSynchDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Lead_Assignment_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers Lead assignment rules when ever there is update on lead from Marketo.</description>
        <label>Trigger Lead Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Subscription Center; User will receive Webinar related send-outs if checked</description>
        <label>Subscription Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xing_URL__c</fullName>
        <label>Xing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>account_demographic_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Account Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>behavior_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dr_account_look_up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Look Up</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_account_type__c</fullName>
        <description>For detecting partners as they enage.</description>
        <inlineHelpText>Defines the type of account (e.g.: customer etc.).</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISV Partners</fullName>
                </value>
                <value>
                    <fullName>Services Partner (GSI)</fullName>
                </value>
                <value>
                    <fullName>Services Partner (Regional)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_behavior_account__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Behavior - Account</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_behavior_person__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Behavior - Person</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_convert_lead_to_contact_2__c</fullName>
        <label>Convert Lead to Contact 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_convert_lead_to_contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Convert Lead to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_company__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Company</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_country__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Country</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_email__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_targeted_title__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Targeted Title</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_company__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Company</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_country__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Country</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_email__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_first_name__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid First Name</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_date_valid_last_name__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Date - Valid Last Name</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_demo_request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Demo Request</description>
        <label>Demo Request</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>